--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,4 @@
-html, body {
+html, body, #root {
 	width: 100%;
 	height: 100%;
 }
@@ -11,9 +11,8 @@ html, body {
 	-webkit-box-direction: normal;
 	    -ms-flex-direction: row;
 	        flex-direction: row;
-	-webkit-box-pack: justify;
-	    -ms-flex-pack: justify;
-	        justify-content: space-between;
+	-ms-flex-pack: distribute;
+	    justify-content: space-around;
 	padding: 0 25px;
 	padding-top: 30px;
 }
@@ -32,15 +31,48 @@ html, body {
 	width: 200px;
 	padding: 10px 20px;
 	background-color: #e9e9e9;
-	font-family: 'VT323', monospace;
-	font-size: 18px;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 16px;
+	line-height: 1.4rem;
 }
 
-.document *:not(.company) {
-	text-transform: uppercase;
+.element {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	width: 100%;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
 }
 
-.block-summ {
+.form {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+}
+
+label {
+	margin-top: 20px;
+	margin-bottom: 5px;
+}
+
+input {
+	height: 20px;
+	min-width: 200px;
+}
+
+button {
+	height: 30px;
+	margin-top: 5px;
+}
+
+.oneline {
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
