--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-html, body {
+html, body, #root {
 	width: 100%;
 	height: 100%;
 }
@@ -6,7 +6,7 @@ html, body {
 .container {
 	display: flex;
 	flex-direction: row;
-	justify-content: space-between;
+	justify-content: space-around;
 	padding: 0 25px;
 	padding-top: 30px;
 }
@@ -18,15 +18,38 @@ html, body {
 	width: 200px;
 	padding: 10px 20px;
 	background-color: #e9e9e9;
-	font-family: 'VT323', monospace;
-	font-size: 18px;
-
-	*:not(.company) {
-		text-transform: uppercase;
-	}
+	font-family: 'Open Sans', sans-serif;
+	font-size: 16px;
+	line-height: 1.4rem;
 }
 
-.block-summ {
+.element {
+	display: flex;
+	width: 100%;
+	flex-direction: column;
+}
+
+.form {
+	display: flex;
+	flex-direction: column;
+}
+
+label {
+	margin-top: 20px;
+	margin-bottom: 5px;
+}
+
+input {
+	height: 20px;
+	min-width: 200px;
+}
+
+button {
+	height: 30px;
+	margin-top: 5px;
+}
+
+.oneline {
 	display: flex;
 	width: 100%;
 	flex-direction: row;
