--- a/src/style.css
+++ b/src/style.css
@@ -34,14 +34,34 @@ html, body, #root {
 	flex-direction: column;
 }
 
-label {
+
+
+.Field {
 	margin-top: 20px;
-	margin-bottom: 5px;
+
+	*:focus {
+    	outline: none;
+	}
+
+	input {
+		height: 30px;
+		min-width: 200px;
+		padding-left: 10px;
+		border: none;
+		border-bottom: 1px solid gray;
+		color: gray;
+
+		&:focus {
+			border-bottom: 1px solid plum;
+		}
+	}
 }
 
-input {
-	height: 20px;
-	min-width: 200px;
+.error {
+	font-size: 10px;
+	color: red;
+	margin-top: 2px;
+	text-transform: uppercase;
 }
 
 button {
