--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,5 @@
+
+
 html, body, #root {
 	width: 100%;
 	height: 100%;
@@ -11,9 +13,9 @@ html, body, #root {
 	-webkit-box-direction: normal;
 	    -ms-flex-direction: row;
 	        flex-direction: row;
-	-ms-flex-pack: distribute;
-	    justify-content: space-around;
-	padding: 0 25px;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
 	padding-top: 30px;
 }
 
@@ -25,10 +27,11 @@ html, body, #root {
 	-webkit-box-direction: normal;
 	    -ms-flex-direction: column;
 	        flex-direction: column;
+	margin-left: 50px;
 	-webkit-box-align: center;
 	    -ms-flex-align: center;
 	        align-items: center;
-	width: 200px;
+	width: 250px;
 	padding: 10px 20px;
 	background-color: #e9e9e9;
 	font-family: 'Open Sans', sans-serif;
@@ -45,6 +48,11 @@ html, body, #root {
 	-webkit-box-direction: normal;
 	    -ms-flex-direction: column;
 	        flex-direction: column;
+}
+
+.element .name {
+	width: 100%;
+	word-wrap: break-word;
 }
 
 .form {
