--- a/public/style.css
+++ b/public/style.css
@@ -1,138 +1,1 @@
-
-
-html, body, #root {
-	width: 100%;
-	height: 100%;
-}
-
-.container {
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-orient: horizontal;
-	-webkit-box-direction: normal;
-	    -ms-flex-direction: row;
-	        flex-direction: row;
-	-webkit-box-pack: center;
-	    -ms-flex-pack: center;
-	        justify-content: center;
-	padding-top: 30px;
-}
-
-.document {
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
-	    -ms-flex-direction: column;
-	        flex-direction: column;
-	margin-left: 50px;
-	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
-	width: 250px;
-	padding: 10px 20px;
-	background-color: #e9e9e9;
-	font-family: 'Open Sans', sans-serif;
-	font-size: 16px;
-	line-height: 1.4rem;
-}
-
-.element {
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	width: 100%;
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
-	    -ms-flex-direction: column;
-	        flex-direction: column;
-}
-
-.element .name {
-	width: 100%;
-	word-wrap: break-word;
-}
-
-.form {
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
-	    -ms-flex-direction: column;
-	        flex-direction: column;
-}
-
-
-
-.Field {
-	margin-top: 20px;
-}
-
-
-
-.Field *:focus {
-	outline: none;
-}
-
-
-
-.Field input {
-	height: 30px;
-	min-width: 200px;
-	padding-left: 10px;
-	border: none;
-	border-bottom: 1px solid gray;
-	color: gray
-}
-
-
-
-.Field input:focus {
-	border-bottom: 1px solid plum;
-}
-
-.error {
-	font-size: 10px;
-	color: red;
-	margin-top: 2px;
-	text-transform: uppercase;
-}
-
-button {
-	height: 30px;
-	margin-top: 5px;
-}
-
-.oneline {
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	width: 100%;
-	-webkit-box-orient: horizontal;
-	-webkit-box-direction: normal;
-	    -ms-flex-direction: row;
-	        flex-direction: row;
-	-webkit-box-pack: justify;
-	    -ms-flex-pack: justify;
-	        justify-content: space-between;
-}
-
-.line {
-	width: 100%;
-	height: 1px;
-	margin: 10px 0;
-	border-top: 2px dashed gray;
-}
-
-.left {
-	-ms-flex-item-align: start;
-	    align-self: flex-start;
-}
-
-.right {
-	-ms-flex-item-align: end;
-	    align-self: flex-end;
-}
+#root,body,html{width:100%;height:100%}.container{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:horizontal;-webkit-box-direction:normal;-ms-flex-direction:row;flex-direction:row;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;padding-top:30px}.document{margin-left:50px;-webkit-box-align:center;-ms-flex-align:center;align-items:center;width:250px;padding:10px 20px;background-color:#e9e9e9;font-family:Open Sans,sans-serif;font-size:16px;line-height:1.4rem}.document,.element{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column}.element{width:100%}.element .name{width:100%;word-wrap:break-word}.form{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column}.Field{margin-top:20px}.Field :focus{outline:none}.Field input{height:30px;min-width:200px;padding-left:10px;border:none;border-bottom:1px solid gray;color:gray}.Field input:focus{border-bottom:1px solid plum}.error{font-size:10px;color:red;margin-top:2px;text-transform:uppercase}button{height:30px;margin-top:5px}.oneline{display:-webkit-box;display:-ms-flexbox;display:flex;width:100%;-webkit-box-orient:horizontal;-webkit-box-direction:normal;-ms-flex-direction:row;flex-direction:row;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between}.line{width:100%;height:1px;margin:10px 0;border-top:2px dashed gray}.left{-ms-flex-item-align:start;align-self:flex-start}.right{-ms-flex-item-align:end;align-self:flex-end}
